--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "webpack serve --env mode=development",
     "build:dev": "webpack --env mode=development",
+    "build:gh": "cross-env PUBLIC_PATH=/react-marusya-app/ webpack --env mode=production",
     "build:prod": "webpack --env mode=production",
     "build:mobile": "webpack --env mode=production --env platform=mobile",
     "build:desktop": "webpack --env mode=production --env platform=desktop",
@@ -45,6 +46,7 @@
     "@typescript-eslint/parser": "^8.46.2",
     "babel-loader": "^10.0.0",
     "copy-webpack-plugin": "^13.0.1",
+    "cross-env": "^10.1.0",
     "css-loader": "^7.1.2",
     "eslint": "^9.38.0",
     "eslint-config-prettier": "^10.1.8",
